# solidworks-api-mcp

./: .gitignore  BUILD_FIX_SUMMARY.md  CODE_REVIEW.md  Cargo.toml  DEPLOYMENT.md  README.md  claude_desktop_config_example.json  package.json  pyproject.toml  requirements.txt  solidworks-api-docs-converter.skill  tsconfig.json
.cursor/rules/: solidworks-mcp.mdc
server/: solidworks_mcp_server.py  solidworks_mcp_server.ts  solidworks_mcp_server_fastmcp.py  solidworks_server_shared.ts  types.ts
solidworks-api/: _embeddings.meta.json  _index.json
solidworks-api-docs-converter/: SKILL.md
solidworks-api-docs-converter/references/: category-taxonomy.md  conversion-rules.md  frontmatter-schema.md  index-files.md  mcp-tool-notes.md  output-structure.md  pipeline.md  quality-checklist.md  source-extraction.md
solidworks-api-docs-converter/scripts/: build_embeddings.py  build_embeddings.ts  convert_solidworks_api.ts
solidworks-api/json/: _index.json
solidworks-api/progguide/: _index.json  _search_index.json
solidworks-api/progguide/patterns/: Connect_to_SolidWorks_Message_Pump_Example_CSharp.md  Create_Surface_Feature_from_Body_Example_VB.md  (+4 more)
solidworks-api/sldworksapi/: _index.json
solidworks-api/swconst/: _index.json  _search_index.json
source/progguide/: #IDXHDR  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  $FIftiMain  ApiHelp.css  Welcome.htm  eHelp.xml  ehlpdhtm.js  sldworksAPIProgGuide.hhc  sldworksAPIProgGuide.hhk
src/: main.rs
tests/: performance.test.ts  regression-contracts.test.ts  test_performance.py
tools/: convert_solidworks_api.py
(+44199 files in other folders)
