[project]
name = "solidworks-mcp"
version = "0.1.0"
description = "MCP server providing intelligent access to SolidWorks API documentation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.12.3",
]

[project.scripts]
solidworks-mcp = "server.solidworks_mcp_server_fastmcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.fastmcp]
name = "solidworks-mcp"
version = "0.1.0"
entrypoint = "server/solidworks_mcp_server_fastmcp.py:main"
